# wirelogic

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: plot_decision_boundary.py
src/wirelogic/: __init__.py  data.py  encode.py  gates.py  harden.py  layers.py  model.py  train.py
tests/: test_data.py  test_gates.py  test_hardening.py  test_layers.py
